--- a/luis-romero/src/index.css
+++ b/luis-romero/src/index.css
@@ -35,9 +35,39 @@ h1{
   align-content: center;
 }
 
-.subTitulos{
+.subtitulos{
   position: relative;
-  left: 2.5%;
-  background-color: cornflowerblue;
+  background-color:  rgb(0, 0, 100);
   width: 95%;
+  color: azure;
+  border-radius: 10px;
+}
+
+.container{
+  flex-direction: column;
+  display: flex;
+  width: 70%;
+  gap: 1rem;
+  align-items: flex-start;
+  padding-left: 2em;
+}
+
+.imagenContainerContent{
+  flex-direction: column;
+  align-self: flex-end;
+  background-color: lawngreen;
+  width: 25%;
+  height: 100px;
+}
+
+.content:nth-child(2){
+  order: 2;
+}
+
+.content:nth-child(3){
+  order: 3;
+}
+
+.content:nth-child(4){
+  order: 4;
 }
