--- a/luis-romero/src/index.css
+++ b/luis-romero/src/index.css
@@ -1,30 +1,33 @@
 body {
   margin: 0;
   font-family: 'Libre Baskerville', serif;
-  background-color: azure;
+  background-color: lightgrey;
 }
 
 .encabezado{
+  background-color: rgb(201, 201, 201);
   position: absolute;
   z-index: 1;
-  background-color: rgb(0, 0, 100);
   height: 100px;
-  width: 100%;
-  margin-top: 0%;
+  width: 98%;
+  margin-top: 1%;
   margin-bottom: 100px;
+  margin-left: 1%;
+  border-radius: 10px;
+  border: 2px solid black;
 }
 
 .imagenYo img{
   position: absolute;
   z-index: 2;
-  right: 1%;
-  top: 1%;
+  right: 2.5%;
+  top: 2%;
   height: 150px;
+  border: 8px solid lightgrey;
 }
 
 h1{
   padding: 1em;
-  color: azure;
 }
 
 #root{
@@ -37,10 +40,17 @@ h1{
 
 .subtitulos{
   position: relative;
-  background-color:  rgb(0, 0, 100);
+  background-color:  rgb(201, 201, 201);
   width: 95%;
-  color: azure;
+  color: black;
   border-radius: 10px;
+  border: 2px solid black;
+  margin: 0.5em;
+}
+
+.App{
+  display: flex;
+  flex-direction: row;
 }
 
 .container{
@@ -66,18 +76,23 @@ h1{
 
 .content{
   text-align: left;
+
+}
+
+.content:nth-child(1){
+  order: 1;
+  font-style: italic;
+  font-size: 0.8em;
 }
 
 .content:nth-child(2){
   order: 2;
+  font-style: normal;
+
 }
 
 .content:nth-child(3){
   order: 3;
-}
-
-.content:nth-child(4){
-  order: 4;
 }
 
 .exp{
